--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/upload.png"></button>
     <div class="container flex">
-      <h1 id="logo"><img src="images/logo3.png"  alt="Ultimate Fitness" width="150" height="50"></h1>
+      <h1 id="logo"><img src="images/logordone.png"  alt="Ultimate Fitness" width="150" height="50"></h1>
       <nav class="navigation" id="navigation">
         <ul>
           <li><a href="#Home">Home</a></li>
