--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
   <title> Fitness center,health club and gym-R D GYM</title>
   <meta name="description" content="First Fitness-The firts leading fitness center in banglore with other courses of yoga and dance,gym ,health club,club health equipment,trainers"/>
   <meta name="keyword" content="Fitness gym,health club,Fitness classes,Fitness center"/>
+  <link href="images/logordone.png" rel="shortcut icon" type="image/x-icon">
   <link rel="stylesheet"  href="css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 </head>
 <body>
+
+  <div id="loader"></div>
+
   <header>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/upload.png"></button>
     <div class="container flex">
